<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1a1a1a"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"

        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="3dp"
            android:text="@string/cloudRaw"
            android:textColor="#fff"
            android:textSize="13dp" />

        <Button
            android:id="@+id/main_btn_subscribe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/raw_shape"
            android:text="@string/subscribe"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/main_btn_publish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/raw_shape"
            android:text="@string/publish"
            android:textColor="@color/white" />


    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#303035" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="3dp"
            android:text="@string/cloudParse"
            android:textColor="#fff"
            android:textSize="13dp" />

        <Button
            android:id="@+id/main_btn_subscribe_parse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/parse_shape"
            android:text="@string/subscribe_parse"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/main_btn_publish_parse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/parse_shape"
            android:text="@string/publish_parse"
            android:textColor="@color/white" />

    </LinearLayout>

    <Button
        android:id="@+id/main_btn_disconnent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/cancleshape"
        android:text="@string/disconnect"
        android:textColor="@color/white" />
</LinearLayout>
